tests/snapshots/test_parser__parser@autoescape.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/autoescape.txt

---
Ok(
    Template {
        children: [
            AutoEscape {
                enabled: Const {
                    value: false,
                } @ 1:14-1:19,
                body: [
                    EmitRaw {
                        raw: "foo",
                    } @ 1:22-1:25,
                ],
            } @ 1:3-1:44,
            EmitRaw {
                raw: "\n",
            } @ 1:44-2:0,
        ],
    } @ 1:0-2:0,
)
