tests/snapshots/test_parser__parser@block.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/block.txt

---
Ok(
    Template {
        children: [
            EmitRaw {
                raw: "<title>",
            } @ 1:0-1:7,
            Block {
                name: "title",
                body: [],
            } @ 1:10-1:38,
            EmitRaw {
                raw: "</title>\n",
            } @ 1:38-2:0,
            Block {
                name: "body",
                body: [
                    EmitRaw {
                        raw: "\n    foo\n",
                    } @ 2:16-4:0,
                ],
            } @ 2:3-4:19,
            EmitRaw {
                raw: "\n",
            } @ 4:19-5:0,
        ],
    } @ 1:0-5:0,
)
