tests/snapshots/test_parser__parser@call.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/call.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Call {
                    expr: Var {
                        id: "super",
                    } @ 1:3-1:8,
                    args: [],
                } @ 1:8-1:13,
            } @ 1:0-1:13,
            EmitRaw {
                raw: "\n",
            } @ 1:13-2:0,
            EmitExpr {
                expr: Call {
                    expr: GetAttr {
                        expr: Var {
                            id: "loop",
                        } @ 2:3-2:7,
                        name: "cycle",
                    } @ 2:7-2:14,
                    args: [
                        Const {
                            value: 1,
                        } @ 2:14-2:15,
                        Const {
                            value: 2,
                        } @ 2:17-2:18,
                    ],
                } @ 2:13-2:22,
            } @ 2:0-2:22,
            EmitRaw {
                raw: "\n",
            } @ 2:22-3:0,
        ],
    } @ 1:0-3:0,
)
