tests/snapshots/test_parser__parser@string_unescape.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/string_unescape.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Const {
                    value: "foo☃bar",
                } @ 1:3-1:17,
            } @ 1:0-1:20,
            EmitRaw {
                raw: "\n",
            } @ 1:20-2:0,
        ],
    } @ 1:0-2:0,
)
