tests/snapshots/test_parser__parser@test.txt.snap
---
source: tests/test_parser.rs
expression: "&ast"
input_file: tests/parser-inputs/test.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Test {
                    name: "even",
                    expr: Var {
                        id: "foo",
                    } @ 1:3-1:6,
                    args: [],
                } @ 1:10-1:17,
            } @ 1:0-1:17,
            EmitRaw {
                raw: "\n",
            } @ 1:17-2:0,
        ],
    } @ 1:0-2:0,
)
